# medical-mvp

./: .gitignore  .replit  pyproject.toml  replit.md
alembic/: env.py
alembic/versions/: acb45406228f_initial_tables.py
app/: __init__.py  main.py
app/api/v1/: ai.py  audio.py  auth.py  patients.py  router.py
app/core/: config.py
app/models/: __init__.py  patient.py
app/schemas/: __init__.py  ai.py  patient.py  user.py  visit.py
app/services/: pdf_service.py  prescription_service.py  soap_service.py  transcription_service.py
backend/: .gitignore  Procfile  backend_tree.txt  replit.md  requirements.txt
backend/app/api/v1/: ai.py  visits.py
backend/app/core/: security.py
backend/app/models/: user.py  visit.py
backend/app/schemas/: ai.py
backend/app/services/: prescription_service.py  transcription_service.py
backend/app/utils/: logger.py
backend/attached_assets/: Pasted-Build-a-complete-production-ready-backend-for-a-web-application-called-AI-Medical-Scribe-using--1764150507341_1764150507342.txt
backend/tmp/audio/: a66c4a73-8592-42af-b81f-b0217a12092b.webm  fb4c7b91-6369-4d3e-bb92-a64f3a9d6b5b.webm
frontend/: README.md  index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: axiosClient.ts
frontend/src/components/: AppLayout.tsx
frontend/src/lib/: mockData.ts
frontend/src/pages/: Auth.tsx  Dashboard.tsx  PatientProfile.tsx  Patients.tsx  Prescription.tsx  Settings.tsx  Transcription.tsx
tmp/audio/: 87cfa6eb-2c63-4e7d-9e9d-6f243db320b8.webm
